--- a/beamline_version/autoprocessing/templates/configuration_template.yaml
+++ b/beamline_version/autoprocessing/templates/configuration_template.yaml
@@ -7,6 +7,7 @@ crystallography:
     converted_directory: "/gpfs/current/processed/convert"
     processed_directory: "/gpfs/current/processed"
     XDS_INP_template: $XDS_INP_template
+    XDS_INP_wedges_template: $XDS_INP_wedges_template
     geometry_for_conversion: $geometry_for_conversion #"/gpfs/comon/scripts/lambda1M5.geom"
     geometry_for_processing: $geometry_for_processing #"/gpfs/comon/scripts/pilatus6M.geom"
     data_h5path: "/entry/instrument/detector/data"
