--- a/beamline_version/autoprocessing/templates/configuration_template.yaml
+++ b/beamline_version/autoprocessing/templates/configuration_template.yaml
@@ -1,7 +1,7 @@
 crystallography:
     ORGX: "None"
     ORGY: "None"
-    DISTANCE_OFFSET: 0 # [mm]
+    distance_offset: 0 # [mm]
     command_for_processing_rotational: "xds_par" 
     raw_directory: "/gpfs/current/raw"
     converted_directory: "/gpfs/current/processed/convert"
